fix alignment of text in version selector

--- a/css/sub-header.less
+++ b/css/sub-header.less
@@ -321,21 +321,22 @@
       color: @mulesoft-dark-grey;
       margin-right: 10px;
     }
-    select{
+    select {
       width: auto;
       appearance: none;
       -webkit-appearance: none;
       -moz-appearance: none;
       border: none;
       border-radius: 0;
-      padding: 7px 33px 7px 10px;
-      background: @mulesoft-light-grey url('../img/nav-expand.svg') 85% 52% no-repeat;
-      background-size: 20px;
-
+      padding: 7px 30px 7px 10px;
+      background: @mulesoft-light-grey url('../img/nav-expand.svg') 90% 55% no-repeat;
+      background-size: 18px;
       color: @mulesoft-dark-grey;
-      text-align: right;
-
-      &:focus{
+      text-align: left;
+      //option {
+      //  text-align: right; // only works in Firefox
+      //}
+      &:focus {
         outline: 0;
       }
     }
@@ -417,16 +418,16 @@
       }
     }
 
-    .version-selector{
-      text-align: right;
-      padding-right: 10px;
-
-
-      select{
+    .version-selector {
+      //text-align: right;
+      //padding-right: 10px;
+      select {
         width: auto;
-        padding: 7px;
+        padding: 7px 20px 7px 7px;
+        background-size: 16px;
+        background-position: 95% 55%;
       }
-      &.hidecontent{
+      &.hidecontent {
         display: none;
       }
     }
